Fix: VC arrow in dark mode on steps

--- a/src/sass/openeyes/components/virtual-clinic/vc-mode/_vc-steps.scss
+++ b/src/sass/openeyes/components/virtual-clinic/vc-mode/_vc-steps.scss
@@ -21,7 +21,7 @@
 				}
 			}
 			&.selected {
-				background:transparent url( svg-path('icons/_classic/direction-right') ) left center no-repeat;
+				background:transparent url( svg-icon-path-theme('direction-right') )left center no-repeat;
 				background-size:13px; // small icon size
 			}
 			
